sorting out IMA.hpp vs BMI270.hpp: move definitions and concepts into IMU.hpp

--- a/TestRunner/makefile
+++ b/TestRunner/makefile
@@ -1,6 +1,6 @@
 CXX = g++
 CXXFLAGS = -g -MMD -std=c++20
-EXTRA_FLAGS = -Wall -Wextra -pedantic -Werror -Wconversion
+EXTRA_FLAGS = -Wall -Wextra -pedantic -Werror -Wconversion -fconcepts-diagnostics-depth=2
 EXTRA_EXTRA_FLAGS = -Wzero-as-null-pointer-constant -Wsign-conversion
 
 INCLUDE_PATHS = -I ../Inc \
